[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts&Ressources/StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/States/ButtonEnabled.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/States/ButtonNormal.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/States/ButtonNormal_Pressed.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/Option.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/States/ButtonEnabled_Pressed.gd" type="Script" id=6]

[node name="Option" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
focus_mode = 0
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
centered = false

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ButtonNormal" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="ButtonNormal_Pressed" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="ButtonEnabled" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="ButtonEnabled_Pressed" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[connection signal="mouse_entered" from="." to="." method="_on_option_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_option_mouse_exited"]
